[package]
name = "nfqueue"
version = "0.9.1"
description = " Netfilter NFQUEUE high-level bindings"
license = "GPL-2.0+"
authors = [ "Pierre Chifflier <chifflier@wzdftpd.net>" ]
keywords = ["netfilter","queue","nfqueue"]
homepage = "https://github.com/chifflier/nfqueue-rs"
repository = "https://github.com/chifflier/nfqueue-rs.git"
edition="2018"

[dependencies]
libc = "^0.2"
errno = "^0.2"
nix = "^0.13"

[dev_dependencies]
pnet = "0.22.0"
